# ytrssfinder

./: README.md  docker-compose.yml
client/: .env  Dockerfile  index.html  package.json  pnpm-lock.yaml
client/src/: App.vue  main.ts  style.scss
client/src/components/: Search.vue
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: arg.rs  main.rs
server/src/web/: app.rs  handler.rs  object.rs
