[package]
name = "ytrssfinder-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.6.20"
clap = { version = "4.4.6", features = ["derive"] }
regex = "1.10.2"
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["cors", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
